tests/baselines/reference/parserComputedPropertyName4.errors.txt
tests/cases/conformance/parser/ecmascript6/ComputedPropertyNames/parserComputedPropertyName4.ts(1,15): error TS2378: A 'get' accessor must return a value or consist of a single 'throw' statement.
tests/cases/conformance/parser/ecmascript6/ComputedPropertyNames/parserComputedPropertyName4.ts(1,16): error TS2304: Cannot find name 'e'.


==== tests/cases/conformance/parser/ecmascript6/ComputedPropertyNames/parserComputedPropertyName4.ts (2 errors) ====
    var v = { get [e]() { } };
                  ~~~
!!! error TS2378: A 'get' accessor must return a value or consist of a single 'throw' statement.
                   ~
!!! error TS2304: Cannot find name 'e'.